--- a/resources/css/micromodal.css
+++ b/resources/css/micromodal.css
@@ -16,6 +16,7 @@ Basic Modal Styles
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 99;
 }
 
 .modal__container {
@@ -56,6 +57,7 @@ Basic Modal Styles
     margin-bottom: 2rem;
     line-height: 1.5;
     color: rgba(0,0,0,.8);
+
 }
 
 .modal__btn {
