お気に入り機能

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -4,3 +4,14 @@
 @tailwind components;
 @tailwind utilities;
 
+/* .far {
+    color: red;
+} */
+
+.fas {
+    color: red;
+}
+
+.liked {
+    color: red;
+  }
